# modern_robotics_rust

./: .gitignore  Cargo.toml  README.md
src/: dynamics.rs  lib.rs  macros.rs  robot_control.rs  trajectory_gen.rs  utils.rs
tests/: fixed_stack_tests.rs
