[package]
name = "modern_robotics_rust"
version = "0.0.1"
edition = "2024"
description = "A Rust implementation of the Modern Robotics library, providing tools for robotics kinematics, dynamics, and control."
license = "MIT"
repository = "https://github.com/TomtheCoder2/modern_robotics_rust"

[dependencies]
nalgebra = "0.34.1"
csv = "1.4.0"
miniplot = { version = "0.0.1", optional = true }
#nalgebra-lapack = { version = "0.25", features = ["openblas"] } #

[features]
default = []
plot = ["miniplot"]
